# Face-Recognition-based-on-FHE

./: CMakeLists.txt  Data Training.py  FACE DETECTION.py  README.md  analyse.cpp  encrypt_and_save.cpp  example.cpp  load_trainer.py  mainwindow.cpp  mainwindow.ui  process_histograms.py  read_yaml.py  save_processed_data.py
